# multiagent

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  requirements.txt  streamlit_app.py  summary.md  ui.py
.claude/: launch.json
.streamlit/: config.toml
src/research_agents/: cli.py  config.py  evaluation.py  graph.py  llm.py  state.py
src/research_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/research_agents/agents/: critic.py  planner.py  researcher.py  writer.py
src/research_agents/tools/: search.py
tests/: conftest.py  test_critic_loop.py  test_evaluation.py  test_graph.py  test_state.py  test_writer.py
