[project]
name = "research-agents"
version = "0.1.0"
description = "Multi-agent research & report automation (planner-researcher-critic-writer)"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
